// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI overrides take precedence 1`] = `
"console.log(
  \\"jest/__best-tests__/file.js should have semi\\"
);
console.log(
  \\"jest/Component.js should not have semi\\"
)
console.log(
  \\"jest/Component.test.js should have semi\\"
);
function js() {
        console.log(
                \\"js/file.js should have tab width 8\\"
        );
}
\\"use strict\\";

module.exports = {
        tabWidth: 8
};
function noConfigJs() {
  console.log(
    \\"no-config/file.js should have no semicolons\\"
  )
}
function packageJs() {
   console.log(
      \\"package/file.js should have tab width 3\\"
   );
}
function rcJson() {
  console.log.apply(
    null,
    [
      'rc-json/file.js',
      'should have trailing comma',
      'and single quotes',
    ],
  );
}
function rcYaml() {
  console.log.apply(
    null,
    [
      'rc-yaml/file.js',
      'should have trailing comma',
      'and single quotes',
    ],
  );
}
"
`;

exports[`accepts configuration from --config 1`] = `
"function js() {
  console.log(\\"js/file.js should have tab width 8\\")
}
"
`;

exports[`resolves configuration file with --find-config-path file 1`] = `
".prettierrc
"
`;

exports[`resolves configuration from external files 1`] = `
"console.log(\\"jest/__best-tests__/file.js should have semi\\");
console.log(\\"jest/Component.js should not have semi\\")
console.log(\\"jest/Component.test.js should have semi\\");
function js() {
        console.log(\\"js/file.js should have tab width 8\\");
}
\\"use strict\\";

module.exports = {
        tabWidth: 8
};
function noConfigJs() {
  console.log(\\"no-config/file.js should have no semicolons\\")
}
function packageJs() {
   console.log(\\"package/file.js should have tab width 3\\");
}
function rcJson() {
  console.log.apply(null, [
    'rc-json/file.js',
    'should have trailing comma',
    'and single quotes',
  ]);
}
function rcYaml() {
  console.log.apply(null, [
    'rc-yaml/file.js',
    'should have trailing comma',
    'and single quotes',
  ]);
}
"
`;

exports[`resolves configuration from external files and overrides by extname 1`] = `
"function noConfigTs() {
  console.log(
    \\"no-config/file.ts should have semicolons because it has a .ts extension\\"
  );
}
function packageTs() {
     console.log(
          \\"package/file.ts should have tab width 5 because it has .ts extension\\"
     );
}
"
`;

exports[`resolves json configuration file with --find-config-path file 1`] = `
"rc-json/.prettierrc.json
"
`;

exports[`resolves yaml configuration file with --find-config-path file 1`] = `
"rc-yaml/.prettierrc.yaml
"
`;
